--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,42 @@ services:
     ports:
       - "8088:8088" # ResourceManager
       - "9864:9864" # DataNode WebUI
-      - "9870:9870" # HDFS
+      - "9870:9870" # HDFS / WebHDFS
+      - "8032:8032" # ResourceManager
+    networks:
+      - data-master
+
+  huedb:
+    image: postgres:12.1-alpine
+    container_name: huedb
+    hostname: huedb
+    volumes:
+      - pg_data:/var/lib/postgresl/data/
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./images/hue/db/db.env
+    networks:
+      - data-master
+  
+  hue:
+    image: gethue/hue
+    container_name: hue
+    hostname: hue
+    ports:
+      - "8888:8888"
+    volumes:
+      - ./images/hue/hue-overrides.ini:/usr/share/hue/desktop/conf/hue-overrides.ini
+    depends_on:
+      - huedb
+      - hadoop
+    networks:
+      - data-master
+
+networks:
+  data-master:
+    driver: bridge
+    
+
+volumes:
+  pg_data:
