--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,32 @@
 version: "3.7"
 services:
-  hadoop:
-    build: ./images/hadoop
-    container_name: hadoop
-    hostname: hadoop
+  hadoop_hive:
+    build: ./images/hadoop_hive
+    container_name: hadoop_hive
+    hostname: hadoop_hive
     ports:
       - "8088:8088" # ResourceManager
       - "9864:9864" # DataNode WebUI
       - "9870:9870" # HDFS / WebHDFS
       - "8032:8032" # ResourceManager
+      - "11000:10000" # HiveServer2 - Binary Mode
+      - "11001:10001" # HiveServer - HTTP Mode
+      - "11002:10002" # Hiveserver WebUI
     networks:
       - data-master
 
-  huedb:
+
+  postgres:
     image: postgres:12.1-alpine
-    container_name: huedb
-    hostname: huedb
+    container_name: postgres
+    hostname: postgres
     volumes:
       - pg_data:/var/lib/postgresl/data/
+      - ./images/postgresql/scripts:/docker-entrypoint-initdb.d
     ports:
       - "5432:5432"
     env_file:
-      - ./images/hue/db/db.env
+      - ./images/postgresql/db.env
     networks:
       - data-master
   
@@ -34,8 +39,8 @@ services:
     volumes:
       - ./images/hue/hue-overrides.ini:/usr/share/hue/desktop/conf/hue-overrides.ini
     depends_on:
-      - huedb
-      - hadoop
+      - postgres
+      - hadoop_hive
     networks:
       - data-master
 
