--- a/images/hadoop_hive/Dockerfile
+++ b/images/hadoop_hive/Dockerfile
@@ -3,9 +3,14 @@ FROM openjdk:8-jdk-slim
 # Variaveis de ambiente do Hadoop
 ENV HADOOP_VERSION 3.2.4
 ENV HADOOP_MINOR_VERSION 3.2
+ENV HIVE_VERSION 3.1.3
+ENV HIVE_HOME=/usr/hive
+ENV HIVE_PORT 10000
 ENV HADOOP_HOME /usr/hadoop-$HADOOP_VERSION
 ENV HADOOP_CONF_DIR=$HADOOP_HOME/etc/hadoop
-ENV PATH $PATH:$JAVA_HOME/bin:$HADOOP_HOME/bin
+ENV PATH $PATH:$JAVA_HOME/bin:$HADOOP_HOME/bin:$HIVE_HOME/bin
+ENV CLASSPATH=$HIVE_HOME/lib
+
 
 USER root
 
@@ -22,6 +27,21 @@ RUN apt-get update \
     && rm hadoop-${HADOOP_VERSION}.tar.gz \
     && rm -rf ${HADOOP_HOME}/share/doc \
     && chown -R root:root ${HADOOP_HOME} \
+    # Hive
+    && wget \
+    https://archive.apache.org/dist/hive/hive-${HIVE_VERSION}/apache-hive-${HIVE_VERSION}-bin.tar.gz \
+    && tar zxvf apache-hive-${HIVE_VERSION}-bin.tar.gz \
+    && rm apache-hive-${HIVE_VERSION}-bin.tar.gz \
+    && mv apache-hive-${HIVE_VERSION}-bin ${HIVE_HOME} \
+    && cp ${HIVE_HOME}/conf/hive-env.sh.template ${HIVE_HOME}/conf/hive-env.sh \
+    && echo "export HADOOP_HOME=/usr/hadoop-${HADOOP_VERSION}/" >> ${HIVE_HOME}/conf/hive-env.sh \
+    && wget \
+    https://jdbc.postgresql.org/download/postgresql-42.6.0.jar \
+    && mv postgresql-42.6.0.jar postgresql-jdbc.jar \
+    # Configurando o conector do metastore do Hive
+    && ln -s postgresql-jdbc.jar ${HIVE_HOME}/lib/postgresql-jdbc.jar \
+     # Criando diretório para jars externos do Hive e baixando suporte a parquet
+    && wget https://repo1.maven.org/maven2/com/twitter/parquet-avro/1.2.5/parquet-avro-1.2.5.jar -P /usr/hive/aux_jars/ \
     # Configurando o JAVA_HOME para os processos localizarem a instalação do Java
     && echo "export JAVA_HOME=${JAVA_HOME}" >> /etc/environment
 
@@ -35,11 +55,13 @@ RUN chmod 600 /root/.ssh/config
 # Todos os arquivos de configuracao que devem ser copiados para dentro do
 # container estao aqui
 COPY configs/hadoop/*.xml /usr/hadoop-${HADOOP_VERSION}/etc/hadoop/
+COPY configs/hive/*.xml ${HIVE_HOME}/conf/
+
 COPY configs/scripts /
 
 # Portas 10000:10002 relativas ao Hiveserver2 
 # Portas 2181 2888 e 3888 relativas ao Zookeper, 9092 ao Kafka, 9999 webui do Hiveserver
-EXPOSE 9000 4040 8020 22 9083 9870 10000 50070
+EXPOSE 9000 4040 8020 22 9083 9870 10000 10001 10002 9999 50070
 
 # Algumas configuracoes adicionais e inicio de alguns servicoes que devem ser feitos em
 # tempo de execucao estao presentes no script bootstrap.
