--- a/images/hue/hue-overrides.ini
+++ b/images/hue/hue-overrides.ini
@@ -34,7 +34,7 @@
     # Note for MariaDB use the 'mysql' engine.
 
     engine=postgresql_psycopg2
-    host=huedb
+    host=postgres
     port=5432
     user=hue
     password=hue
@@ -61,7 +61,7 @@
       # Use WebHdfs/HttpFs as the communication mechanism.
       # Domain should be the NameNode or HttpFs host.
       # Default port is 14000 for HttpFs.
-      webhdfs_url=http://hadoop:9870/webhdfs/v1
+      webhdfs_url=http://hadoop_hive:9870/webhdfs/v1
 
   # Configuration for YARN (MR2)
   # ------------------------------------------------------------------------
@@ -69,16 +69,16 @@
 
     [[[default]]]
       # Enter the host on which you are running the ResourceManager
-      resourcemanager_host=http://hadoop
+      resourcemanager_host=http://hadoop_hive
 
       # The port where the ResourceManager IPC listens on
       resourcemanager_port=8032
 
       # URL of the ResourceManager API
-      resourcemanager_api_url=http://hadoop:8088
+      resourcemanager_api_url=http://hadoop_hive:8088
 
       # URL of the ProxyServer API
-      proxy_api_url=http://hadoop:8088
+      proxy_api_url=http://hadoop_hive:8088
 
       # URL of the HistoryServer API
     ;   history_server_api_url=http://historyserver:8188
@@ -95,10 +95,11 @@
 
   # Host where HiveServer2 is running.
   # If Kerberos security is enabled, use fully-qualified domain name (FQDN).
-  #hive_server_host=hive-server #jdbc:hive2://hive-server
-  
+  hive_server_host=hadoop_hive
+  #jdbc:hive2://hive-server
+
   # Port where HiveServer2 Thrift server runs on.
-  #hive_server_port=10000
+  hive_server_port=10000
 
   #thrift_version=7
 
