hive finish setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.7"
 services:
-  hadoop_hive:
+  hadoop-hive:
     build: ./images/hadoop_hive
-    container_name: hadoop_hive
-    hostname: hadoop_hive
+    container_name: hadoop-hive
+    hostname: hadoop-hive
     ports:
       - "8088:8088" # ResourceManager
       - "9864:9864" # DataNode WebUI
@@ -12,6 +12,8 @@ services:
       - "11000:10000" # HiveServer2 - Binary Mode
       - "11001:10001" # HiveServer - HTTP Mode
       - "11002:10002" # Hiveserver WebUI
+    depends_on:
+      - postgres
     networks:
       - data-master
 
@@ -40,7 +42,7 @@ services:
       - ./images/hue/hue-overrides.ini:/usr/share/hue/desktop/conf/hue-overrides.ini
     depends_on:
       - postgres
-      - hadoop_hive
+      - hadoop-hive
     networks:
       - data-master
 
