--- a/images/hue/hue-overrides.ini
+++ b/images/hue/hue-overrides.ini
@@ -111,10 +111,10 @@
 
 [spark]
   # The Livy Server URL.
-  ## livy_server_url=http://localhost:8998
+  livy_server_url=http://spark-hive:8998
 
   # Configure Livy to start in local 'process' mode, or 'yarn' workers.
-  ## livy_server_session_kind=yarn
+  livy_server_session_kind=yarn
 
   # Whether Livy requires client to perform Kerberos authentication.
   ## security_enabled=false
@@ -133,7 +133,7 @@
 [libzookeeper]
   # ZooKeeper ensemble. Comma separated list of Host/Port.
   # e.g. localhost:2181,localhost:2182,localhost:2183
-  ## ensemble=localhost:2181
+  ensemble=zookeeper:2181
 
 
 ###########################################################################
@@ -144,11 +144,10 @@
 
   [[kafka]]
     # Enable the Kafka integration.
-    ## is_enabled=false
+    is_enabled=true
 
     # Base URL of Kafka REST API.
-    ## api_url=http://localhost:8082
-
+    api_url=http://kafka:29092
 
 ###########################################################################
 # Settings to configure Metadata
